--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
       context: .
     container_name: rancher-scaler
     volumes:
-       - ./config/rancher-scaler.config.js:/opt/rancher-scaler/config/rancher-scaler.config.js
+       - ./config/:/opt/rancher-scaler/config/
       #  TMP testing only
        - ./src/:/opt/rancher-scaler/src/
     environment:
       - SCALE=DOWN
+      - PATH_TO_CONFIG=/opt/rancher-scaler/config/rancher-scaler.config.js
     env_file:
       - .env.docker
+    # command: 'sh -c "tail -f /dev/null"'
