--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node ./src/index.ts",
     "scale:up": "METHOD=SCALE SCALE=UP ts-node ./src/index.ts",
     "scale:down": "METHOD=SCALE SCALE=DOWN ts-node ./src/index.ts",
+    "bootstrap": "METHOD=BOOTSTRAP ts-node ./src/index.ts",
     "verify": "METHOD=VERIFY ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./src/**/*.ts *.js",
