--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "ts-node ./src/index.ts",
     "scale:up": "METHOD=SCALE SCALE=UP ts-node ./src/index.ts",
     "scale:down": "METHOD=SCALE SCALE=DOWN ts-node ./src/index.ts",
+    "bs": "npm rum bootstrap",
     "bootstrap": "METHOD=BOOTSTRAP ts-node ./src/index.ts",
     "verify": "METHOD=VERIFY ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:unit": "jest --testMatch '**/src/**/*.unit.ts'",
+    "test:service": "jest --testMatch '**/src/**/*.service.ts'",
     "lint": "eslint ./src/**/*.ts *.js",
     "build": "tsc",
     "watch": "tsc -w"
@@ -17,10 +20,12 @@
   "author": "Lewis Daly",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "unzipper": "^0.10.11"
   },
   "devDependencies": {
     "@types/jest": "25.2.2",
+    "@types/unzipper": "^0.10.3",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "eslint": "6.8.0",
