--- a/rancher-scaler-job-tmp.yaml
+++ b/rancher-scaler-job-tmp.yaml
@@ -1,13 +1,14 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: rancher-scaler-job-up
+  name: rancher-scaler-tmp
 spec:
   template:
     spec:
       containers:
-        - name: rancher-scaler-job-up
+        - name: rancher-scaler-tmp
           image: mojaloop/rancher-scaler:latest
+          command: ["sh", "-c", "tail -f /dev/null"]
           env:
             - name: SCALE
               value: DOWN
