--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "Lewis Daly",
   "license": "Apache-2.0",
   "dependencies": {
+    "@mojaloop/central-services-logger": "10.4.0",
     "axios": "^0.19.2",
     "unzipper": "^0.10.11"
   },
