--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": [
-    "src"
+    "src", 
+    "ambient.d.ts"
   ],
   "exclude": [
     "node_modules",
@@ -11,6 +12,10 @@
     "coverage"
   ],
   "compilerOptions": {
+    // "typeRoots": [
+    //   "./node_modules/@types",
+    //   "typings"
+    // ],
     "target": "es2018",
     "module": "commonjs",
     "lib": [
@@ -22,7 +27,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
@@ -37,8 +42,11 @@
     "paths": {
       "*": [
         "src/*",
-        "node_modules/*"
-      ]
+        "node_modules/*",
+      ],
+      // "@mojaloop/central-services-logger": [
+      //   "types/@mojaloop/central-services-logger"
+      // ]
     },
     "esModuleInterop": true
   }
