--- a/rancher-scaler-cron-up.yaml
+++ b/rancher-scaler-cron-up.yaml
@@ -12,9 +12,8 @@ spec:
           containers:
             - name: rancher-scaler-cron-up
               image: mojaloop/rancher-scaler:latest
+              command: ["sh", "-c", "npm run scale:pre_up && npm run scale:up && npm run scale:post_up"]
               env:
-                - name: SCALE
-                  value: UP
                 - name: CATTLE_ACCESS_KEY
                   value: token-czddw
                 - name: CATTLE_SECRET_KEY
@@ -22,5 +21,17 @@ spec:
                     secretKeyRef:
                       name: rancher-scaler-secrets
                       key: cattle_secret_key
+                - name: LOG_LEVEL
+                  value: debug
+                - name: RANCHER_BASE_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: rancher-scaler-secrets
+                      key: rancher_base_url
+                - name: SLACK_WEBHOOK_URL
+                  valueFrom:
+                    secretKeyRef:
+                      name: rancher-scaler-secrets
+                      key: slack_webhook_url
             
           restartPolicy: OnFailure
