--- a/rancher-scaler-job-tmp.yaml
+++ b/rancher-scaler-job-tmp.yaml
@@ -8,15 +8,9 @@ spec:
       containers:
         - name: rancher-scaler-tmp
           image: mojaloop/rancher-scaler:latest
+          command: ["sh", "-c", "npm run scale:pre_up && npm run scale:up && npm run scale:post_up"]
           # command: ["sh", "-c", "tail -f /dev/null"]
           env:
-            - name: METHOD
-              value: BOOTSTRAP
-            - name: RANCHER_BASE_URL
-              valueFrom:
-                secretKeyRef:
-                  name: rancher-scaler-secrets
-                  key: rancher_base_url
             - name: CATTLE_ACCESS_KEY
               value: token-czddw
             - name: CATTLE_SECRET_KEY
@@ -26,6 +20,16 @@ spec:
                   key: cattle_secret_key
             - name: LOG_LEVEL
               value: debug
+            - name: RANCHER_BASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: rancher-scaler-secrets
+                  key: rancher_base_url
+            - name: SLACK_WEBHOOK_URL
+              valueFrom:
+                secretKeyRef:
+                  name: rancher-scaler-secrets
+                  key: slack_webhook_url
       restartPolicy: Never
 
 
