--- a/rancher-scaler-job-up.yaml
+++ b/rancher-scaler-job-up.yaml
@@ -10,11 +10,6 @@ spec:
           image: mojaloop/rancher-scaler:latest
           command: ["sh", "-c", "npm run scale:pre_up && npm run scale:up && npm run scale:post_up"]
           env:
-            - name: RANCHER_BASE_URL
-              valueFrom:
-                secretKeyRef:
-                  name: rancher-scaler-secrets
-                  key: rancher_base_url
             - name: CATTLE_ACCESS_KEY
               value: token-czddw
             - name: CATTLE_SECRET_KEY
@@ -22,6 +17,18 @@ spec:
                 secretKeyRef:
                   name: rancher-scaler-secrets
                   key: cattle_secret_key
+            - name: LOG_LEVEL
+              value: debug
+            - name: RANCHER_BASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: rancher-scaler-secrets
+                  key: rancher_base_url
+            - name: SLACK_WEBHOOK_URL
+              valueFrom:
+                secretKeyRef:
+                  name: rancher-scaler-secrets
+                  key: slack_webhook_url
       restartPolicy: Never
 
 
