--- a/rancher-scaler-cron-up.yaml
+++ b/rancher-scaler-cron-up.yaml
@@ -7,6 +7,8 @@ spec:
   schedule: "1 * * * *"
   jobTemplate:
     spec:
+      # Timeout after 10 minutes
+      activeDeadlineSeconds: 600
       template:
         spec:
           containers:
