fix issues where boostrapper isn't waiting for hooks to be up

--- a/rancher-scaler-job-tmp.yaml
+++ b/rancher-scaler-job-tmp.yaml
@@ -8,7 +8,7 @@ spec:
       containers:
         - name: rancher-scaler-tmp
           image: mojaloop/rancher-scaler:latest
-          command: ["sh", "-c", "npm run scale:down"]
+          command: ["sh", "-c", "npm run scale:up"]
           # command: ["sh", "-c", "tail -f /dev/null"]
           env:
             - name: CATTLE_ACCESS_KEY
