--- a/rancher-scaler-job-down.yaml
+++ b/rancher-scaler-job-down.yaml
@@ -5,6 +5,19 @@ metadata:
 spec:
   template:
     spec:
+      nodeSelector:
+        node-role.kubernetes.io/controlplane: "true"
+      tolerations:
+        # tolerate: node-role.kubernetes.io/controlplane=true:NoSchedule
+        - effect: NoSchedule
+          key: node-role.kubernetes.io/controlplane
+          value: "true"
+          operator: Equal
+        # tolerate: node-role.kubernetes.io/etcd=true:NoExecute
+        - effect: NoExecute
+          key: node-role.kubernetes.io/etcd
+          value: "true"
+          operator: Equal
       containers:
         - name: rancher-scaler-job-down
           image: mojaloop/rancher-scaler:latest
