--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@hapi/joi": "^17.1.1",
     "@mojaloop/central-services-logger": "10.4.0",
     "@slack/webhook": "^5.0.3",
+    "aws-sdk": "^2.713.0",
     "axios": "^0.19.2",
     "unzipper": "^0.10.11"
   },
