--- a/helm/templates/cronjob-scaleDown.yaml
+++ b/helm/templates/cronjob-scaleDown.yaml
@@ -29,7 +29,7 @@ spec:
           containers:
             - name: rancher-scaler-cron-down
               image: {{ .Values.scaleDown.image }}
-              command: ["sh", "-c", "npm run scale:up"]
+              command: ["sh", "-c", "npm run scale:down"]
               env:
                 - name: CATTLE_ACCESS_KEY
                   value: {{ .Values.scaleDown.cattleAccessKey }}
