adding a once off helm chart

--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node ./src/index.ts",
-    "scale:pre_up": "METHOD=PRE_SCALE_UP_GLOBAL ts-node ./src/index.ts",
-    "scale:up": "METHOD=SCALE SCALE=UP ts-node ./src/index.ts",
-    "scale:post_up": "METHOD=POST_SCALE_UP_GLOBAL ts-node ./src/index.ts",
-    "scale:pre_down": "METHOD=PRE_SCALE_DOWN_GLOBAL ts-node ./src/index.ts",
-    "scale:down": "METHOD=SCALE SCALE=DOWN ts-node ./src/index.ts",
-    "scale:post_down": "METHOD=POST_SCALE_DOWN_GLOBAL ts-node ./src/index.ts",
+    "kube-scale:up": "METHOD=SCALE SCALE=UP ./scripts/_scale.sh",
+    "kube-scale:down": "METHOD=SCALE SCALE=DOWN ./scripts/_scale.sh",
+    "local-scale:pre_up": "METHOD=PRE_SCALE_UP_GLOBAL ts-node ./src/index.ts",
+    "local-scale:up": "METHOD=SCALE SCALE=UP ts-node ./src/index.ts",
+    "local-scale:post_up": "METHOD=POST_SCALE_UP_GLOBAL ts-node ./src/index.ts",
+    "local-scale:pre_down": "METHOD=PRE_SCALE_DOWN_GLOBAL ts-node ./src/index.ts",
+    "local-scale:post_down": "METHOD=POST_SCALE_DOWN_GLOBAL ts-node ./src/index.ts",
+    "local-verify": "METHOD=VERIFY ts-node ./src/index.ts",
     "bs": "npm run bootstrap",
     "bootstrap": "METHOD=BOOTSTRAP ts-node ./src/index.ts",
-    "verify": "METHOD=VERIFY ts-node ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:unit": "jest --testMatch '**/src/**/*.unit.ts'",
     "test:service": "jest --testMatch '**/src/**/*.service.ts'",
