--- a/helm-once/templates/rancher-scaler-secret.yaml
+++ b/helm-once/templates/rancher-scaler-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: rancher-scaler-once-secret
 data:
-  CATTLE_SECRET_KEY: {{ .Values.secret.CATTLE_SECRET_KEY }}
-  RANCHER_BASE_URL:  {{ .Values.secret.RANCHER_BASE_URL }}
-  SLACK_WEBHOOK_URL: {{ .Values.secret.SLACK_WEBHOOK_URL }}
+  CATTLE_SECRET_KEY: {{ .Values.secret.CATTLE_SECRET_KEY | b64enc }}
+  RANCHER_BASE_URL:  {{ .Values.secret.RANCHER_BASE_URL | b64enc }}
+  SLACK_WEBHOOK_URL: {{ .Values.secret.SLACK_WEBHOOK_URL | b64enc }}
 type: Opaque
