--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
           - dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Execute unit tests
-          command: npm run test:unit
+          command: npm run test:unit -- --reporters=default --reporters=jest-junit
       - run:
           name: prepare test/results
           command: |
