--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rancher-scaler",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple cli tool to scale rancher clusters",
   "main": "index.ts",
   "scripts": {
+    "build": "tsc",
     "start": "ts-node ./src/index.ts",
     "kube-scale:up": "./scripts/_scale_once.sh local-scale:up",
     "kube-scale:down": "./scripts/_scale_once.sh local-scale:down",
@@ -22,7 +23,7 @@
     "test:coverage": "jest --testMatch '**/src/**/*.unit.ts' --coverage --coverageThreshold='{}'",
     "test:coverage-check": "jest --testMatch '**/src/**/*.unit.ts' --coverage",
     "lint": "eslint ./src/**/*.ts *.js",
-    "build": "tsc",
+    "release": "standard-version",
     "watch": "tsc -w"
   },
   "author": "Lewis Daly",
@@ -33,7 +34,8 @@
     "@slack/webhook": "^5.0.3",
     "aws-sdk": "^2.713.0",
     "axios": "^0.19.2",
-    "unzipper": "^0.10.11"
+    "unzipper": "^0.10.11",
+    "standard-version": "^8.0.2"
   },
   "devDependencies": {
     "@types/hapi__joi": "^17.1.2",
